conformance/tests/httproute-https-listener-detect-misdirected-requests.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-1
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace-with-https-listener
    sectionName: https
  hostnames:
  - example.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /detect-misdirected-requests
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace-with-https-listener
    sectionName: https-with-hostname
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /detect-misdirected-requests
    backendRefs:
    - name: infra-backend-v2
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-3
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace-with-https-listener
    sectionName: https-with-wildcard-hostname
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /detect-misdirected-requests
    backendRefs:
    - name: infra-backend-v3
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-listener-detect-misdirected-requests-test-4
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace-with-https-listener
    sectionName: https-with-hostname-matching-wildcard
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /detect-misdirected-requests
    backendRefs:
    - name: infra-backend-v1
      port: 8080
